--- a/bs/packages/2.html
+++ b/bs/packages/2.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/b/blueman/blueman/">blueman</a></td>
               <td>2.3.5-2+b1</td>
               <td>Graphical bluetooth manager</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bluez/bluetooth/">bluetooth</a></td>
               <td>5.66-1+deb12u2</td>
               <td>Bluetooth support (metapackage)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez/bluez/">bluez</a></td>
               <td>5.66-1+deb12u2</td>
               <td>Bluetooth tools and daemons</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bluez/bluez-obexd/">bluez-obexd</a></td>
               <td>5.66-1+deb12u2</td>
               <td>bluez obex daemon</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bolt/bolt/">bolt</a></td>
               <td>0.9.5-1</td>
               <td>system daemon to manage thunderbolt 3 devices</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/breeze/breeze/">breeze</a></td>
               <td>4:5.27.5-3</td>
               <td>Default Plasma theme (Metapackage)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/breeze/breeze-cursor-theme/">breeze-cursor-theme</a></td>
               <td>4:5.27.5-2</td>
               <td>Default Plasma cursor theme</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/breeze-gtk/breeze-gtk-theme/">breeze-gtk-theme</a></td>
               <td>5.27.5-2</td>
               <td>GTK theme built to match KDE's Breeze</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/breeze-icons/breeze-icon-theme/">breeze-icon-theme</a></td>
               <td>4:5.128</td>
               <td>Default Plasma icon theme</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bsd-mailx/bsd-mailx/">bsd-mailx</a></td>
               <td>8.1.2-0.20220412cvs-1</td>
               <td>simple mail user agent</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/bsdextrautils/">bsdextrautils</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>extra utilities from 4.4BSD-Lite</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/bsdutils/">bsdutils</a></td>
               <td>1:2.38.1-5+deb12u3</td>
               <td>basic utilities from 4.4BSD-Lite</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/btrfs-progs/btrfs-progs/">btrfs-progs</a></td>
               <td>6.12-1~bpo12+1</td>
               <td>Checksumming Copy on Write Filesystem utilities</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bubblewrap/bubblewrap/">bubblewrap</a></td>
               <td>0.8.0-2+deb12u1</td>
               <td>utility for unprivileged chroot and namespace manipulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/build-essential/build-essential/">build-essential</a></td>
               <td>12.9</td>
               <td>Informational list of build-essential packages</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bup/bup/">bup</a></td>
               <td>0.33.7-1~deb12u1</td>
               <td>highly efficient file backup system based on git</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bup/bup-doc/">bup-doc</a></td>
               <td>0.33.7-1~deb12u1</td>
               <td>highly efficient file backup system based on git (documentation)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/busybox/busybox/">busybox</a></td>
               <td>1:1.35.0-4+b4</td>
               <td>Tiny utilities for small and embedded systems</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/bzip2/bzip2/">bzip2</a></td>
               <td>1.0.8-5+b1</td>
               <td>high-quality block-sorting file compressor - utilities</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bzip2/bzip2-doc/">bzip2-doc</a></td>
               <td>1.0.8-5</td>
               <td>high-quality block-sorting file compressor - documentation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/ca-certificates/ca-certificates/">ca-certificates</a></td>
               <td>20230311</td>
               <td>Common CA certificates</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/ca-certificates-java/ca-certificates-java/">ca-certificates-java</a></td>
               <td>20230710~deb12u1</td>
               <td>Common CA certificates (JKS keystore)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/calamares/calamares/">calamares</a></td>
               <td>2024.05.06</td>
               <td>distribution-independent installer framework</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/calamares-settings-openbosniana/calamares-settings-openbosniana/">calamares-settings-openbosniana</a></td>
               <td>2024.04.15</td>
               <td>OpenBosniana OS theme and settings for the Calamares Installer</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/catatonit/catatonit/">catatonit</a></td>
               <td>0.1.7-1+b1</td>
               <td>init process for containers</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/catdoc/catdoc/">catdoc</a></td>
               <td>1:0.95-5</td>
               <td>text extractor for MS-Office files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia/celestia/">celestia</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia/celestia-common/">celestia-common</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>common files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-data/">celestia-data</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-gtk/">celestia-gtk</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Gtk frontend)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-gtk-dbgsym/">celestia-gtk-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-gtk</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt5/">celestia-qt5</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Qt5 frontend)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt5-dbgsym/">celestia-qt5-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-qt5</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt6/">celestia-qt6</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (Qt6 frontend)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-qt6-dbgsym/">celestia-qt6-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-qt6</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-sdl/">celestia-sdl</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (SDL frontend)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-sdl-dbgsym/">celestia-sdl-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-sdl</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-hires/">celestia-textures-hires</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-textures-hires-openbosniana/celestia-textures-hires-openbosniana/">celestia-textures-hires-openbosniana</a></td>
               <td>1.0.0</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-lores/">celestia-textures-lores</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/celestia-data/celestia-textures-medres/">celestia-textures-medres</a></td>
               <td>1.7.0~git20241103+c3104d9-1</td>
               <td>data files for Celestia, a real-time visual space simulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-tools/">celestia-tools</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>real-time visual space simulation (tools)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/celestia/celestia-tools-dbgsym/">celestia-tools-dbgsym</a></td>
               <td>1.7.0~git20241107+62716d8c-1</td>
               <td>debug symbols for celestia-tools</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/codium/codium/">codium</a></td>
               <td>1.95.2.24313</td>
               <td>Code editing. Redefined.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/console-setup/console-setup/">console-setup</a></td>
               <td>1.221</td>
               <td>console font and keymap setup program</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/console-setup/console-setup-linux/">console-setup-linux</a></td>
               <td>1.221</td>
               <td>Linux specific part of console-setup</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/golang-github-containernetworking-plugins/containernetworking-plugins/">containernetworking-plugins</a></td>
               <td>1.1.1+ds1-3+b5</td>
               <td>standard networking plugins - binaries</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/coreutils/coreutils/">coreutils</a></td>
               <td>9.1-1</td>
               <td>GNU core utilities</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cpio/cpio/">cpio</a></td>
               <td>2.13+dfsg-7.1</td>
               <td>GNU cpio -- a program to manage archives of files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-defaults/cpp/">cpp</a></td>
               <td>4:12.2.0-3</td>
               <td>GNU C preprocessor (cpp)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
