--- a/bs/packages/21.html
+++ b/bs/packages/21.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/s/sonnet/libkf5sonnet5-data/">libkf5sonnet5-data</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, data files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonnet/libkf5sonnetcore5/">libkf5sonnetcore5</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, core lib</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonnet/libkf5sonnetui5/">libkf5sonnetui5</a></td>
               <td>5.103.0-1</td>
               <td>spell checking library for Qt, ui lib</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/frameworkintegration/libkf5style5/">libkf5style5</a></td>
               <td>5.103.0-1</td>
               <td>KF5 cross-framework integration plugins - KStyle</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdesu/libkf5su-bin/">libkf5su-bin</a></td>
               <td>5.103.0-1</td>
               <td>runtime files for kdesu</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdesu/libkf5su-data/">libkf5su-data</a></td>
               <td>5.103.0-1</td>
               <td>translation files for kdesu</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdesu/libkf5su5/">libkf5su5</a></td>
               <td>5.103.0-1</td>
               <td>Integration with su for privilege escalation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/syndication/libkf5syndication5abi1/">libkf5syndication5abi1</a></td>
               <td>1:5.103.0-1</td>
               <td>parser library for RSS and Atom feeds</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/ksyntax-highlighting/libkf5syntaxhighlighting-data/">libkf5syntaxhighlighting-data</a></td>
               <td>5.103.0-3</td>
               <td>Syntax highlighting Engine - translations</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ksyntax-highlighting/libkf5syntaxhighlighting5/">libkf5syntaxhighlighting5</a></td>
               <td>5.103.0-3</td>
               <td>Syntax highlighting Engine</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libksysguard/libkf5sysguard-data/">libkf5sysguard-data</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - data files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5templateparser5/">libkf5templateparser5</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KMail template parser library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ktexteditor/libkf5texteditor-bin/">libkf5texteditor-bin</a></td>
               <td>5.103.0-1.1</td>
               <td>provide advanced plain text editing services (binaries)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ktexteditor/libkf5texteditor5/">libkf5texteditor5</a></td>
               <td>5.103.0-1.1</td>
               <td>provide advanced plain text editing services</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/ktextwidgets/libkf5textwidgets-data/">libkf5textwidgets-data</a></td>
               <td>5.103.0-1</td>
               <td>Advanced text editing widgets.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ktextwidgets/libkf5textwidgets5/">libkf5textwidgets5</a></td>
               <td>5.103.0-1</td>
               <td>Advanced text editing widgets.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/t/threadweaver/libkf5threadweaver5/">libkf5threadweaver5</a></td>
               <td>5.103.0-1</td>
               <td>ThreadWeaver library to help multithreaded programming in Qt</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ktnef/libkf5tnef5/">libkf5tnef5</a></td>
               <td>4:22.12.3-1</td>
               <td>library for handling TNEF data</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwallet-kf5/libkf5wallet-bin/">libkf5wallet-bin</a></td>
               <td>5.103.0-1</td>
               <td>Secure and unified container for user passwords.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwallet-kf5/libkf5wallet-data/">libkf5wallet-data</a></td>
               <td>5.103.0-1</td>
               <td>Secure and unified container for user passwords.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwallet-kf5/libkf5wallet5/">libkf5wallet5</a></td>
               <td>5.103.0-1</td>
               <td>Secure and unified container for user passwords.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwayland/libkf5waylandclient5/">libkf5waylandclient5</a></td>
               <td>4:5.103.0-1</td>
               <td>Qt library wrapper for Wayland libraries</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kf5-messagelib/libkf5webengineviewer5abi1/">libkf5webengineviewer5abi1</a></td>
               <td>4:22.12.3-2~deb12u1</td>
               <td>KDE's Qt Web Engine Viewer</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwidgetsaddons/libkf5widgetsaddons-data/">libkf5widgetsaddons-data</a></td>
               <td>5.103.0-1</td>
               <td>add-on widgets and classes for applications that use the Qt Widgets module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwidgetsaddons/libkf5widgetsaddons5/">libkf5widgetsaddons5</a></td>
               <td>5.103.0-1</td>
               <td>add-on widgets and classes for applications that use the Qt Widgets module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwindowsystem/libkf5windowsystem-data/">libkf5windowsystem-data</a></td>
               <td>5.103.0-1</td>
               <td>Convenience access to certain properties and features of the window manager</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwindowsystem/libkf5windowsystem5/">libkf5windowsystem5</a></td>
               <td>5.103.0-1</td>
               <td>Convenience access to certain properties and features of the window manager</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kxmlgui/libkf5xmlgui-bin/">libkf5xmlgui-bin</a></td>
               <td>5.103.0-1</td>
               <td>User configurable main windows.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kxmlgui/libkf5xmlgui-data/">libkf5xmlgui-data</a></td>
               <td>5.103.0-1</td>
               <td>User configurable main windows.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kxmlgui/libkf5xmlgui5/">libkf5xmlgui5</a></td>
               <td>5.103.0-1</td>
               <td>User configurable main windows.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/libkfontinst5/">libkfontinst5</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Tools and widgets for the desktop library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/libkfontinstui5/">libkfontinstui5</a></td>
               <td>4:5.27.5-2+deb12u2</td>
               <td>Tools and widgets for the desktop library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdiagram/libkgantt2/">libkgantt2</a></td>
               <td>2.8.0-1</td>
               <td>library for creating Gantt diagrams (shared library)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kdiagram/libkgantt2-l10n/">libkgantt2-l10n</a></td>
               <td>2.8.0-1</td>
               <td>library for creating Gantt diagrams (translations)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kimageannotator/libkimageannotator-common/">libkimageannotator-common</a></td>
               <td>0.6.0-1</td>
               <td>Image Annotating Library (common data files)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kimageannotator/libkimageannotator0/">libkimageannotator0</a></td>
               <td>0.6.0-1</td>
               <td>Image Annotating Library (lib)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/klibc/libklibc/">libklibc</a></td>
               <td>2.0.12-1</td>
               <td>minimal libc subset for use with initramfs</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmod/libkmod2/">libkmod2</a></td>
               <td>30+20221128-1</td>
               <td>libkmod shared library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkolabxml/libkolabxml1v5/">libkolabxml1v5</a></td>
               <td>1.2.1-4+b2</td>
               <td>Kolab XML format (shared library)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kaddressbook/libkpimaddressbookimportexport5/">libkpimaddressbookimportexport5</a></td>
               <td>4:22.12.3-1</td>
               <td>Addressbook import export library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libk/libkgapi/libkpimgapi-data/">libkpimgapi-data</a></td>
               <td>22.12.3-1</td>
               <td>Google API library for KDE -- data files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libkpimgapicalendar5/">libkpimgapicalendar5</a></td>
               <td>22.12.3-1</td>
               <td>library to integrate with Google Calendar service API</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libkpimgapicontacts5/">libkpimgapicontacts5</a></td>
               <td>22.12.3-1</td>
               <td>library to integrate with Google Contacts service API</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libkpimgapicore5abi1/">libkpimgapicore5abi1</a></td>
               <td>22.12.3-1</td>
               <td>core library to integrate with Google service APIs</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libkpimgapitasks5/">libkpimgapitasks5</a></td>
               <td>22.12.3-1</td>
               <td>library to integrate with Google Tasks service API</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/akonadi-import-wizard/libkpimimportwizard5/">libkpimimportwizard5</a></td>
               <td>4:22.12.3-1</td>
               <td>PIM data import wizard - library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kitinerary/libkpimitinerary-data/">libkpimitinerary-data</a></td>
               <td>22.12.3-1</td>
               <td>library for Travel Reservation information - arch independent data</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kitinerary/libkpimitinerary5/">libkpimitinerary5</a></td>
               <td>22.12.3-1</td>
               <td>library for Travel Reservation information</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpkpass/libkpimpkpass5/">libkpimpkpass5</a></td>
               <td>22.12.3-1</td>
               <td>library for Apple Wallet Pass reader</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ksmtp/libkpimsmtp5abi1/">libkpimsmtp5abi1</a></td>
               <td>22.12.3-1</td>
               <td>library for handling SMTP data</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
