--- a/bs/packages/34.html
+++ b/bs/packages/34.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/n/node-ansi-styles/node-ansi-styles/">node-ansi-styles</a></td>
               <td>6.2.1-2</td>
               <td>ANSI escape codes for styling strings in the terminal with Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-anymatch/node-anymatch/">node-anymatch</a></td>
               <td>3.1.3+~cs4.6.1-2</td>
               <td>Matches strings against configurable strings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-aproba/node-aproba/">node-aproba</a></td>
               <td>2.0.0-3</td>
               <td>light-weight argument validator</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-archy/node-archy/">node-archy</a></td>
               <td>1.0.0-6</td>
               <td>Pretty-print nested hierarchies module for Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-are-we-there-yet/node-are-we-there-yet/">node-are-we-there-yet</a></td>
               <td>3.0.1+~1.1.0-1</td>
               <td>Keep track of the overall completion of many disparate processes</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-argparse/node-argparse/">node-argparse</a></td>
               <td>2.0.1-2</td>
               <td>CLI arguments parser for node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-arrify/node-arrify/">node-arrify</a></td>
               <td>2.0.1-3</td>
               <td>Convert a value to an array</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-assert/node-assert/">node-assert</a></td>
               <td>2.0.0+~cs3.9.8-2</td>
               <td>simple assertion library for javascript</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-async/node-async/">node-async</a></td>
               <td>0.8.0-6</td>
               <td>functions and patterns for asynchronous code - Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-async-each/node-async-each/">node-async-each</a></td>
               <td>1.0.3-3</td>
               <td>async parallel forEach / map function for JavaScript</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-auto-bind/node-auto-bind/">node-auto-bind</a></td>
               <td>4.0.0-2</td>
               <td>Automatically bind methods to their class instance</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-polyfills/node-babel-helper-define-polyfill-provider/">node-babel-helper-define-polyfill-provider</a></td>
               <td>0.3.3~0~20220913+ds1-1</td>
               <td>node-babel helper for polyfills</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-plugin-add-module-exports/node-babel-plugin-add-module-exports/">node-babel-plugin-add-module-exports</a></td>
               <td>1.0.4+dfsg1~cs5.8.0-4</td>
               <td>Babel plugin for default module.exports like babel version 5</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-plugin-lodash/node-babel-plugin-lodash/">node-babel-plugin-lodash</a></td>
               <td>3.3.4+~cs2.0.1-6</td>
               <td>Modular Lodash builds without the hassle</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-polyfills/node-babel-plugin-polyfill-corejs2/">node-babel-plugin-polyfill-corejs2</a></td>
               <td>0.3.3~0~20220913+ds1-1</td>
               <td>node-babel plugin to inject corejs2 polyfill</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-polyfills/node-babel-plugin-polyfill-corejs3/">node-babel-plugin-polyfill-corejs3</a></td>
               <td>0.6.0~0~20220913+ds1-1</td>
               <td>node-babel plugin to inject corejs3 polyfill</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel-polyfills/node-babel-plugin-polyfill-regenerator/">node-babel-plugin-polyfill-regenerator</a></td>
               <td>0.4.1~0~20220913+ds1-1</td>
               <td>node-babel plugin to regenerate polyfills</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel7/node-babel7/">node-babel7</a></td>
               <td>7.20.15+ds1+~cs214.269.168-3+deb12u2</td>
               <td>Babel compiler for writing next generation JavaScript</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-babel7/node-babel7-runtime/">node-babel7-runtime</a></td>
               <td>7.20.15+ds1+~cs214.269.168-3+deb12u2</td>
               <td>Babel modular runtime helpers</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-balanced-match/node-balanced-match/">node-balanced-match</a></td>
               <td>2.0.0-1</td>
               <td>Match balanced character pairs in Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-base/node-base/">node-base</a></td>
               <td>3.0.0-3</td>
               <td>foundation for creating modular, unit testable node.js application</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-base64-js/node-base64-js/">node-base64-js</a></td>
               <td>1.5.1+dfsg+~1.3.0-2</td>
               <td>Base64 encoding/decoding in pure JS</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-binary-extensions/node-binary-extensions/">node-binary-extensions</a></td>
               <td>2.2.0-2</td>
               <td>List of binary file extensions</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-brace-expansion/node-brace-expansion/">node-brace-expansion</a></td>
               <td>2.0.1-2</td>
               <td>Brace expansion as known from sh/bash for Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-braces/node-braces/">node-braces</a></td>
               <td>3.0.2+~3.0.1-1</td>
               <td>Fast, comprehensive, bash-like brace expansion implemented in JS</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-browserslist/node-browserslist/">node-browserslist</a></td>
               <td>4.21.4+~cs6.1.17-2</td>
               <td>Share browsers list between different front-end tools</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-builtins/node-builtins/">node-builtins</a></td>
               <td>5.0.1-1</td>
               <td>lists nodejs builtin modules</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-busboy/node-busboy/">node-busboy</a></td>
               <td>1.6.0+~cs2.6.0-2</td>
               <td>Node.js module for parsing incoming HTML form data</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cacache/node-cacache/">node-cacache</a></td>
               <td>17.0.3+~cs10.3.7-1</td>
               <td>fast, fault-tolerant, disk-based, data-agnostic, content-addressable cache</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cache-base/node-cache-base/">node-cache-base</a></td>
               <td>4.0.2-1</td>
               <td>Basic object cache for node.js/javascript projects</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-camelcase/node-camelcase/">node-camelcase</a></td>
               <td>7.0.0-3</td>
               <td>Convert a string to camelCase</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-caniuse-lite/node-caniuse-lite/">node-caniuse-lite</a></td>
               <td>1.0.30001436+dfsg+~1.0.1-1</td>
               <td>smaller version of caniuse-db, with only the essentials</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-chalk/node-chalk/">node-chalk</a></td>
               <td>5.2.0-1</td>
               <td>Terminal string styling for Node.js</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-chokidar/node-chokidar/">node-chokidar</a></td>
               <td>3.5.3-2</td>
               <td>wrapper around watch / watchFile / fsevents</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-chownr/node-chownr/">node-chownr</a></td>
               <td>2.0.0-2</td>
               <td>like chown -R</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-chrome-trace-event/node-chrome-trace-event/">node-chrome-trace-event</a></td>
               <td>1.0.3-2</td>
               <td>create a trace of your node app per Google's Trace Event format</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ci-info/node-ci-info/">node-ci-info</a></td>
               <td>3.6.1+~cs1.1.0-1</td>
               <td>Get details about the current Continuous Integration environment</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cjs-module-lexer/node-cjs-module-lexer/">node-cjs-module-lexer</a></td>
               <td>1.2.2+dfsg-5</td>
               <td>Fast lexer to extract named exports from CommonJS modules</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cli-boxes/node-cli-boxes/">node-cli-boxes</a></td>
               <td>2.2.1-2</td>
               <td>Boxes for use in the terminal</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cli-cursor/node-cli-cursor/">node-cli-cursor</a></td>
               <td>4.0.0-3</td>
               <td>Toggle the CLI cursor</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cli-table/node-cli-table/">node-cli-table</a></td>
               <td>0.3.11+~cs0.13.4-3</td>
               <td>Pretty unicode tables for the CLI</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cli-truncate/node-cli-truncate/">node-cli-truncate</a></td>
               <td>2.1.0-5</td>
               <td>Truncate a string to a specific width in the terminal</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-cliui/node-cliui/">node-cliui</a></td>
               <td>7.0.4+repack+~cs3.1.0-4</td>
               <td>easily create complex multi-column CLIs</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-clone/node-clone/">node-clone</a></td>
               <td>2.1.2-4</td>
               <td>deep cloning of objects and arrays</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-clone-deep/node-clone-deep/">node-clone-deep</a></td>
               <td>4.0.1+~cs7.0.2-1</td>
               <td>Recursively (deep) clone JavaScript native types</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-collection-visit/node-collection-visit/">node-collection-visit</a></td>
               <td>1.0.0-4</td>
               <td>Visit a method over items in object, or map visit over the objects</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-color-convert/node-color-convert/">node-color-convert</a></td>
               <td>2.0.1+~cs2.0.0-2</td>
               <td>Plain color conversion functions</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-color-name/node-color-name/">node-color-name</a></td>
               <td>1.1.4+~1.1.1-2</td>
               <td>list of color names and its values</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/c/colors.js/node-colors/">node-colors</a></td>
               <td>1.4.0-4</td>
               <td>Get color and style in your node.js console</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-columnify/node-columnify/">node-columnify</a></td>
               <td>1.6.0+~1.5.1-1</td>
               <td>Render data in text columns with in-column text-wrap</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
