--- a/bs/packages/45.html
+++ b/bs/packages/45.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/python-notify2/python3-notify2/">python3-notify2</a></td>
               <td>0.3-5</td>
               <td>desktop notifications API for Python 3</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-oauthlib/python3-oauthlib/">python3-oauthlib</a></td>
               <td>3.2.2-1</td>
               <td>generic, spec-compliant implementation of OAuth for Python3</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/olefile/python3-olefile/">python3-olefile</a></td>
               <td>0.46-3</td>
               <td>Python module to read/write MS OLE2 files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyopenssl/python3-openssl/">python3-openssl</a></td>
               <td>23.0.0-1</td>
               <td>Python 3 wrapper around the OpenSSL library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-packaging/python3-packaging/">python3-packaging</a></td>
               <td>23.0-1</td>
               <td>core utilities for python3 packages</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pillow/python3-pil/">python3-pil</a></td>
               <td>9.4.0-1.1+deb12u1</td>
               <td>Python Imaging Library (Python3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip/">python3-pip</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pip/python3-pip-whl/">python3-pip-whl</a></td>
               <td>23.0.1+dfsg-1</td>
               <td>Python package installer (pip wheel)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-pkg-resources/">python3-pkg-resources</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Package Discovery and Resource Access using pkg_resources</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pypng/python3-png/">python3-png</a></td>
               <td>0.20220715.0-1</td>
               <td>Pure Python PNG Reader/Writer (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-psutil/python3-psutil/">python3-psutil</a></td>
               <td>5.9.4-1+b1</td>
               <td>module providing convenience functions for managing processes (Python3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycryptodome/python3-pycryptodome/">python3-pycryptodome</a></td>
               <td>3.11.0+dfsg1-4</td>
               <td>cryptographic Python library (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pycurl/python3-pycurl/">python3-pycurl</a></td>
               <td>7.45.2-3</td>
               <td>Python bindings to libcurl (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pygments/python3-pygments/">python3-pygments</a></td>
               <td>2.14.0+dfsg-1</td>
               <td>syntax highlighting package written in Python 3</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyinotify/python3-pyinotify/">python3-pyinotify</a></td>
               <td>0.9.6-2</td>
               <td>simple Linux inotify Python bindings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-pylibacl/python3-pylibacl/">python3-pylibacl</a></td>
               <td>0.7.0-2</td>
               <td>module for manipulating POSIX.1e ACLs (Python3 version)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-pynvim/python3-pynvim/">python3-pynvim</a></td>
               <td>0.4.2-2</td>
               <td>Python3 library for scripting Neovim processes through its msgpack-rpc API</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pyparsing/python3-pyparsing/">python3-pyparsing</a></td>
               <td>3.0.9-1</td>
               <td>alternative to creating and executing simple grammars - Python 3.x</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5/python3-pyqt5/">python3-pyqt5</a></td>
               <td>5.15.9+dfsg-1</td>
               <td>Python 3 bindings for Qt5</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyqt5-sip/python3-pyqt5.sip/">python3-pyqt5.sip</a></td>
               <td>12.11.1-1</td>
               <td>runtime module for Python extensions using SIP</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyrsistent/python3-pyrsistent/">python3-pyrsistent</a></td>
               <td>0.18.1-1+b3</td>
               <td>persistent/functional/immutable data structures for Python</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtcore/">python3-pyside2.qtcore</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 core module (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtgui/">python3-pyside2.qtgui</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Gui module (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pyside2/python3-pyside2.qtwidgets/">python3-pyside2.qtwidgets</a></td>
               <td>5.15.8-2+b1</td>
               <td>Python bindings for Qt5 Widgets module (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/pysimplesoap/python3-pysimplesoap/">python3-pysimplesoap</a></td>
               <td>1.16.2-5</td>
               <td>simple and lightweight SOAP Library (Python 3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-pyxattr/python3-pyxattr/">python3-pyxattr</a></td>
               <td>0.8.1-1</td>
               <td>module for manipulating filesystem extended attributes (Python3)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-qrcode/python3-qrcode/">python3-qrcode</a></td>
               <td>7.4.2-2</td>
               <td>QR Code image generator library - Python 3.x</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/reportbug/python3-reportbug/">python3-reportbug</a></td>
               <td>12.0.0</td>
               <td>Python modules for interacting with bug tracking systems</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/requests/python3-requests/">python3-requests</a></td>
               <td>2.28.1+dfsg-1</td>
               <td>elegant and simple HTTP library for Python3, built for human beings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-requests-toolbelt/python3-requests-toolbelt/">python3-requests-toolbelt</a></td>
               <td>0.10.1-1</td>
               <td>Utility belt for advanced users of python3-requests</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-rfc3986/python3-rfc3986/">python3-rfc3986</a></td>
               <td>1.5.0-2</td>
               <td>validating URI references per RFC 3986 - Python 3.x</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-rfc3987/python3-rfc3987/">python3-rfc3987</a></td>
               <td>1.3.8-2</td>
               <td>Parsing and validation of URIs (RFC 3986) and IRIs (RFC 3987)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/rich/python3-rich/">python3-rich</a></td>
               <td>13.3.1-1</td>
               <td>render rich text, tables, progress bars, syntax highlighting, markdown and more</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-setproctitle/python3-setproctitle/">python3-setproctitle</a></td>
               <td>1.3.1-1+b2</td>
               <td>Setproctitle implementation for Python 3</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-setuptools/">python3-setuptools</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Python3 Distutils Enhancements</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/setuptools/python3-setuptools-whl/">python3-setuptools-whl</a></td>
               <td>66.1.1-1+deb12u1</td>
               <td>Python Distutils Enhancements (wheel package)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/simplejson/python3-simplejson/">python3-simplejson</a></td>
               <td>3.18.3-1</td>
               <td>simple, fast, extensible JSON encoder/decoder for Python 3.x</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/six/python3-six/">python3-six</a></td>
               <td>1.16.0-4</td>
               <td>Python 2 and 3 compatibility library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pysmbc/python3-smbc/">python3-smbc</a></td>
               <td>1.0.23-2+b4</td>
               <td>Python 3 bindings for the Samba client library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-sniffio/python3-sniffio/">python3-sniffio</a></td>
               <td>1.2.0-1</td>
               <td>detect which async Python library is in use</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-socketio/python3-socketio/">python3-socketio</a></td>
               <td>5.7.2-2</td>
               <td>python3 implementation of the Socket.IO realtime client and server</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-socksipy/python3-socks/">python3-socks</a></td>
               <td>1.7.1+dfsg-1</td>
               <td>Python 3 SOCKS client module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/software-properties/python3-software-properties/">python3-software-properties</a></td>
               <td>0.99.30-4.1~deb12u1</td>
               <td>manage the repositories that you install software from</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/speech-dispatcher/python3-speechd/">python3-speechd</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Python interface to Speech Dispatcher</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-stem/python3-stem/">python3-stem</a></td>
               <td>1.8.1-2.1</td>
               <td>Tor control library for Python 3 series</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/samba/python3-talloc/">python3-talloc</a></td>
               <td>2:2.4.2+samba4.21.5+dfsg-1~bpo12+1</td>
               <td>hierarchical pool based memory allocator - Python3 bindings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/samba/python3-tdb/">python3-tdb</a></td>
               <td>2:1.4.12+samba4.21.5+dfsg-1~bpo12+1</td>
               <td>Python3 bindings for TDB</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/t/texttable/python3-texttable/">python3-texttable</a></td>
               <td>1.6.7-1</td>
               <td>Module for creating simple ASCII tables — python3</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python-tornado/python3-tornado/">python3-tornado</a></td>
               <td>6.2.0-3+deb12u1</td>
               <td>scalable, non-blocking web server and tools - Python 3 package</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/p/python-typing-extensions/python3-typing-extensions/">python3-typing-extensions</a></td>
               <td>4.4.0-1</td>
               <td>Backported and Experimental Type Hints for Python</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
