--- a/bs/packages/9.html
+++ b/bs/packages/9.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/k/khotkeys/khotkeys/">khotkeys</a></td>
               <td>4:5.27.5-2</td>
               <td>configure input actions settings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/khotkeys/khotkeys-data/">khotkeys-data</a></td>
               <td>4:5.27.5-2</td>
               <td>configure input actions settings</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kimageformats/kimageformat-plugins/">kimageformat-plugins</a></td>
               <td>5.103.0-2</td>
               <td>additional image format plugins for QtGui</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kinfocenter/kinfocenter/">kinfocenter</a></td>
               <td>4:5.27.5-2</td>
               <td>system information viewer</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kinit/kinit/">kinit</a></td>
               <td>5.103.0-1</td>
               <td>process launcher to speed up launching KDE applications</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio/kio/">kio</a></td>
               <td>5.103.0-1+deb12u1</td>
               <td>resource and network access abstraction</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kio-extras/kio-extras/">kio-extras</a></td>
               <td>4:22.12.3-1</td>
               <td>Extra functionality for kioslaves.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kio-extras/kio-extras-data/">kio-extras-data</a></td>
               <td>4:22.12.3-1</td>
               <td>Extra functionality for kioslaves data files.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/klibc/klibc-utils/">klibc-utils</a></td>
               <td>2.0.12-1</td>
               <td>small utilities built with klibc for early boot</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmenuedit/kmenuedit/">kmenuedit</a></td>
               <td>4:5.27.5-2</td>
               <td>XDG menu editor</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kmod/kmod/">kmod</a></td>
               <td>30+20221128-1</td>
               <td>tools for managing Linux kernel modules</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kolourpaint/kolourpaint/">kolourpaint</a></td>
               <td>4:22.12.3-1</td>
               <td>simple image editor and drawing application</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/konsole/konsole/">konsole</a></td>
               <td>4:22.12.3-1</td>
               <td>X terminal emulator</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/konsole/konsole-kpart/">konsole-kpart</a></td>
               <td>4:22.12.3-1</td>
               <td>Konsole plugin for Qt applications</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdeclarative/kpackagelauncherqml/">kpackagelauncherqml</a></td>
               <td>5.103.0-1</td>
               <td>commandline tool for launching kpackage QML application</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpackage/kpackagetool5/">kpackagetool5</a></td>
               <td>5.103.0-1</td>
               <td>command line kpackage tool</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kpeoplevcard/kpeople-vcard/">kpeople-vcard</a></td>
               <td>0.1-3</td>
               <td>vCard plugin for the KPeople framework</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/krb5/krb5-locales/">krb5-locales</a></td>
               <td>1.20.1-2+deb12u3</td>
               <td>internationalization support for MIT Kerberos</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kross/kross/">kross</a></td>
               <td>5.103.0-1</td>
               <td>Multi-language application scripting.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kscreen/kscreen/">kscreen</a></td>
               <td>4:5.27.5-2</td>
               <td>KDE monitor hotplug and screen handling</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ksshaskpass/ksshaskpass/">ksshaskpass</a></td>
               <td>4:5.27.5-2</td>
               <td>interactively prompt users for a passphrase for ssh-add</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ksystemstats/ksystemstats/">ksystemstats</a></td>
               <td>5.27.5-2</td>
               <td>plugin based system monitoring daemon</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/ktexteditor/ktexteditor-data/">ktexteditor-data</a></td>
               <td>5.103.0-1.1</td>
               <td>provide advanced plain text editing services</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/ktexteditor/ktexteditor-katepart/">ktexteditor-katepart</a></td>
               <td>5.103.0-1.1</td>
               <td>provide advanced plain text editing services</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kup-backup/kup-backup/">kup-backup</a></td>
               <td>0.9.1-1+b3</td>
               <td>backup tool for KDE's Plasma desktop</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kuserfeedback/kuserfeedback-doc/">kuserfeedback-doc</a></td>
               <td>1.2.0-2</td>
               <td>user feedback for applications - documentation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwalletmanager/kwalletmanager/">kwalletmanager</a></td>
               <td>4:22.12.3-1</td>
               <td>secure password wallet manager</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwayland/kwayland-data/">kwayland-data</a></td>
               <td>4:5.103.0-1</td>
               <td>Qt library wrapper for Wayland libraries - data files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwayland-integration/kwayland-integration/">kwayland-integration</a></td>
               <td>5.27.5-2</td>
               <td>kwayland runtime integration plugins</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwin/kwin-common/">kwin-common</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager, common files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/k/kwin/kwin-data/">kwin-data</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager data files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/b/breeze/kwin-style-breeze/">kwin-style-breeze</a></td>
               <td>4:5.27.5-2</td>
               <td>KWin Breeze Style</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwin/kwin-wayland/">kwin-wayland</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager, wayland version, PREVIEW release</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kwin/kwin-x11/">kwin-x11</a></td>
               <td>4:5.27.5-3</td>
               <td>KDE window manager, X11 version</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kate/kwrite/">kwrite</a></td>
               <td>4:22.12.3-1</td>
               <td>simple text editor</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/laptop-detect/laptop-detect/">laptop-detect</a></td>
               <td>0.16</td>
               <td>system chassis type checker</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/layer-shell-qt/layer-shell-qt/">layer-shell-qt</a></td>
               <td>5.27.5-2</td>
               <td>use the Wayland wl-layer-shell protocol - plugin</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/less/less/">less</a></td>
               <td>590-2.1~deb12u2</td>
               <td>pager program similar to more</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/a52dec/liba52-0.7.4/">liba52-0.7.4</a></td>
               <td>0.7.4-20</td>
               <td>library for decoding ATSC A/52 streams</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/aalib/libaa1/">libaa1</a></td>
               <td>1.4p5-50</td>
               <td>ASCII art library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libaacs/libaacs0/">libaacs0</a></td>
               <td>0.11.1-2</td>
               <td>free-and-libre implementation of AACS</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/abseil/libabsl20220623/">libabsl20220623</a></td>
               <td>20220623.1-1+deb12u2</td>
               <td>extensions to the C++ standard library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libaccounts-glib/libaccounts-glib0/">libaccounts-glib0</a></td>
               <td>1.26-1</td>
               <td>Accounts database access - shared library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libaccounts-qt/libaccounts-qt5-1/">libaccounts-qt5-1</a></td>
               <td>1.16-2</td>
               <td>Accounts database access Qt version - Qt5 shared library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/accountsservice/libaccountsservice0/">libaccountsservice0</a></td>
               <td>22.08.8-6</td>
               <td>query and manipulate user account information - shared libraries</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/a/acl/libacl1/">libacl1</a></td>
               <td>2.3.1-3</td>
               <td>access control list - shared library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libadwaita-1/libadwaita-1-0/">libadwaita-1-0</a></td>
               <td>1.2.2-1</td>
               <td>Library with GTK widgets for mobile phones</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libaio/libaio1/">libaio1</a></td>
               <td>0.3.113-4</td>
               <td>Linux kernel AIO access library - shared library</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/liba/libalgorithm-diff-perl/libalgorithm-diff-perl/">libalgorithm-diff-perl</a></td>
               <td>1.201-1</td>
               <td>module to find differences between files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liba/libalgorithm-diff-xs-perl/libalgorithm-diff-xs-perl/">libalgorithm-diff-xs-perl</a></td>
               <td>0.04-8+b1</td>
               <td>module to find differences between files (XS accelerated)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
