--- a/bs/packages/47.html
+++ b/bs/packages/47.html
@@ -232,350 +232,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/q/qtgraphicaleffects-opensource-src/qml-module-qtgraphicaleffects/">qml-module-qtgraphicaleffects</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Graphical Effects module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtmultimedia-opensource-src/qml-module-qtmultimedia/">qml-module-qtmultimedia</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Multimedia QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtqml/">qml-module-qtqml</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 QtQml QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtqml-models2/">qml-module-qtqml-models2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Models2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-controls/">qml-module-qtquick-controls</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Quick Controls QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols2-opensource-src/qml-module-qtquick-controls2/">qml-module-qtquick-controls2</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt 5 Qt Quick Controls 2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-dialogs/">qml-module-qtquick-dialogs</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Dialogs QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-layouts/">qml-module-qtquick-layouts</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Quick Layouts QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-particles2/">qml-module-qtquick-particles2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 particles 2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols-opensource-src/qml-module-qtquick-privatewidgets/">qml-module-qtquick-privatewidgets</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Private Widgets QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-shapes/">qml-module-qtquick-shapes</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Qt Quick Shapes QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtquickcontrols2-opensource-src/qml-module-qtquick-templates2/">qml-module-qtquick-templates2</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt 5 Qt Quick Templates 2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtvirtualkeyboard-opensource-src/qml-module-qtquick-virtualkeyboard/">qml-module-qtquick-virtualkeyboard</a></td>
               <td>5.15.8+dfsg-2</td>
               <td>Qt virtual keyboard - QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick-window2/">qml-module-qtquick-window2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 window 2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtdeclarative-opensource-src/qml-module-qtquick2/">qml-module-qtquick2</a></td>
               <td>5.15.8+dfsg-3</td>
               <td>Qt 5 Qt Quick 2 QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtwebkit-opensource-src/qml-module-qtwebkit/">qml-module-qtwebkit</a></td>
               <td>5.212.0~alpha4-30</td>
               <td>Qt WebKit QML module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtimageformats-opensource-src/qt5-image-formats-plugins/">qt5-image-formats-plugins</a></td>
               <td>5.15.8-2</td>
               <td>Qt 5 Image Formats module</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtchooser/qtchooser/">qtchooser</a></td>
               <td>66-2</td>
               <td>Wrapper to select between Qt development binary versions</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/q/qttranslations-opensource-src/qttranslations5-l10n/">qttranslations5-l10n</a></td>
               <td>5.15.8-2</td>
               <td>translations for Qt 5</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qtwayland-opensource-src/qtwayland5/">qtwayland5</a></td>
               <td>5.15.8-2</td>
               <td>QtWayland platform plugin</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qucs-s/qucs-s/">qucs-s</a></td>
               <td>24.4.0-1</td>
               <td>Quite Universal Circuit Simulator with SPICE (Qucs-S)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/raspberrypi-archive-keyring/raspberrypi-archive-keyring/">raspberrypi-archive-keyring</a></td>
               <td>2021.1.1+rpt1</td>
               <td>GnuPG archive keys of the Raspberry Pi OS archive</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/raspbian-archive-keyring/raspbian-archive-keyring/">raspbian-archive-keyring</a></td>
               <td>20120528.2</td>
               <td>GnuPG archive keys of the raspbian archive</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/readline/readline-common/">readline-common</a></td>
               <td>8.2-1.3</td>
               <td>GNU readline and history libraries, common files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiser4progs/reiser4progs/">reiser4progs</a></td>
               <td>1.2.2-1+b1</td>
               <td>administration utilities for the Reiser4 filesystem</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiserfsprogs/reiserfsprogs/">reiserfsprogs</a></td>
               <td>1:3.6.27-8~bpo12+1</td>
               <td>User-level tools for ReiserFS filesystems</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/rename/rename/">rename</a></td>
               <td>2.01-1</td>
               <td>Perl extension for renaming multiple files</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/r/reportbug/reportbug/">reportbug</a></td>
               <td>12.0.0</td>
               <td>reports bugs in the Debian distribution</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rng-tools5/rng-tools5/">rng-tools5</a></td>
               <td>5-4.1</td>
               <td>Daemon to use a Hardware TRNG</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rpcsvc-proto/rpcsvc-proto/">rpcsvc-proto</a></td>
               <td>1.4.3-1</td>
               <td>RPC protocol compiler and definitions</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rsync/rsync/">rsync</a></td>
               <td>3.2.7-1+deb12u2</td>
               <td>fast, versatile, remote (and local) file-copying tool</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtkit/rtkit/">rtkit</a></td>
               <td>0.13-5</td>
               <td>Realtime Policy and Watchdog Daemon</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtmpdump/rtmpdump/">rtmpdump</a></td>
               <td>2.4+20151223.gitfa8646d.1-2+b2</td>
               <td>small dumper for media content streamed over the RTMP protocol</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dh-runit/runit-helper/">runit-helper</a></td>
               <td>2.15.2</td>
               <td>dh-runit implementation detail</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/screen/screen/">screen</a></td>
               <td>4.9.0-4</td>
               <td>terminal multiplexer with VT100/ANSI terminal emulation</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sddm/sddm/">sddm</a></td>
               <td>0.19.0-5+openbosniana1</td>
               <td>modern display manager for X11</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/sddm-theme-breeze/">sddm-theme-breeze</a></td>
               <td>4:5.27.7</td>
               <td>Modified Breeze SDDM theme</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/plasma-workspace/sddm-theme-debian-breeze/">sddm-theme-debian-breeze</a></td>
               <td>4:5.27.5-2+openbosniana2</td>
               <td>Debian Breeze SDDM theme</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sed/sed/">sed</a></td>
               <td>4.9-1</td>
               <td>GNU stream editor for filtering/transforming text</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sensible-utils/sensible-utils/">sensible-utils</a></td>
               <td>0.0.17+nmu1</td>
               <td>Utilities for sensible alternative selection</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sgml-base/sgml-base/">sgml-base</a></td>
               <td>1.31</td>
               <td>SGML infrastructure and SGML catalog file support</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/sgml-data/sgml-data/">sgml-data</a></td>
               <td>2.0.11+nmu1</td>
               <td>common SGML and XML data</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shared-mime-info/shared-mime-info/">shared-mime-info</a></td>
               <td>2.2-1</td>
               <td>FreeDesktop.org shared MIME database and spec</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shim-signed/shim-signed/">shim-signed</a></td>
               <td>1.44~1+deb12u1+15.8-1~deb12u1</td>
               <td>Secure Boot chain-loading bootloader (Microsoft-signed binary)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/s/shim-signed/shim-signed-common/">shim-signed-common</a></td>
               <td>1.44~1+deb12u1+15.8-1~deb12u1</td>
               <td>Secure Boot chain-loading bootloader (common helper scripts)</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signon-plugin-oauth2/signon-plugin-oauth2/">signon-plugin-oauth2</a></td>
               <td>0.25-2</td>
               <td>OAuth 1.0/2.0 plugin for the Accounts SignOn daemon</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sirikali/sirikali/">sirikali</a></td>
               <td>1.5.0-2</td>
               <td>Manage user encrypted volumes</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/slirp4netns/slirp4netns/">slirp4netns</a></td>
               <td>1.2.0-1</td>
               <td>User-mode networking for unprivileged network namespaces</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/smartmontools/smartmontools/">smartmontools</a></td>
               <td>7.4-2~bpo12+1</td>
               <td>control and monitor storage systems using S.M.A.R.T.</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/socat/socat/">socat</a></td>
               <td>1.8.0.0-4~bpo12+1</td>
               <td>multipurpose relay for bidirectional data transfer</td>
-              <td>2025-05-26 05:39:18</td>
+              <td>2025-05-28 08:10:13</td>
             </tr>
 
         </tbody>
@@ -770,7 +770,7 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
-<script src="packages.js"></script>
+<script src="/bs/packages/packages.js"></script>
 <script>
 function searchPackages() {
     const input = document.getElementById("searchBox").value.toLowerCase();
