--- a/bs/index.html
+++ b/bs/index.html
@@ -583,6 +583,17 @@ crossorigin="anonymous"></script>
       <p class="nunito-dark p-2 mt-2">
         Nedavna ažuriranja. Pogledaj više<a href="/bs/packages/"> ovdje</a>.
       </p>
+                    <p class="nunito-dark">
+                    Pronađi pakete pomoću našeg mrežnog preglednika paketa. 
+                    </p>
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
     </div>
     <div class="table-responsive tabela-okvir-1 nunito-dark">
       <table class="table table-sm">
@@ -807,7 +818,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="/bs/packages/packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
